# fortran-metrics

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: metrics_mo.f90
src/bak/: makefile_2024-10-06_1018  metrics_mo_2024-10-07_1500.f90  metrics_mo_2024-10-07_1501.f90
test/: CMakeLists.txt  unit_test1.f90
tests/: CMakeLists.txt  makefile
